KC-6902 #comment Hiding the heart icon on mobile and fixing CSS for favourite button on profile pages

--- a/web/public/css/front_end/youroffers.less
+++ b/web/public/css/front_end/youroffers.less
@@ -81,6 +81,7 @@
 		border-color:#dedede;
 		clear: both;
 		float: left;
+        max-width: 135px;
 		span{
 			display:inline-block;
 			vertical-align:middle;
@@ -220,7 +221,11 @@
 			}
 		}
         .pop {
-          padding: 5px 3px 7px 11px;
+            padding: 5px 12px 7px;
+            min-width: 82px;
+            &:hover{
+                padding: 5px 12px 7px;
+            }
         }
 	}
 }
